--- a/final/introduction.tex
+++ b/final/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-The concept of containerization traces its origins back to 1979, when the chroot system call was first introduced to Version 7 Unix \cite{1}. Containerization has significantly increased in popularity since 2013, when Docker began to dominate the market. Now, containers play an essential role in modern software development and distribution practices. Since the technology matured, the security concerns have become more evident. As a result, numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, and various defensive mechanisms have been proposed to address them.
+The concept of containerization traces its origins back to 1979, when the \texttt{chroot} system call was first introduced to Unix 7 \cite{1}. Containerization has significantly increased in popularity since 2013, when Docker began to dominate the market. Now, containers play an essential role in modern software development and distribution practices. Since the technology matured, the security concerns have become more evident. As a result, numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, and various defensive mechanisms have been proposed to address them.
 
 The objective of this paper is to thoroughly examine the fundamentals of containerization, explore modern technologies used in this field and investigate the security concerns associated with these technologies. Specifically, attention will be paid to the defensive measures implemented in the Linux kernel as well as the limits of their applicability, including their ability to prevent container escape attacks. Furthermore, various tools for static analysis of the security of container images available on the market will be evaluated and a quality assessment of the results produced by these tools will be conducted.
 
