--- a/final/main.tex
+++ b/final/main.tex
@@ -12,6 +12,7 @@
 \include{pages/title}
 \include{pages/tocpage}
 \include{pages/annotation}
+\include{pages/acknowledgements}
 \include{introduction}
 \include{theory}
 \include{hardening}
