--- a/final/pages/annotation.tex
+++ b/final/pages/annotation.tex
@@ -1,6 +1,6 @@
 \newpage
 \section*{Annotation}
-\addcontentsline{toc}{section}{Annotation}
+% \addcontentsline{toc}{section}{Annotation}
 
 Container virtualization plays a significant role in modern software development practices. The combination of reduced overhead and faster startup time makes this technology advantageous for the industry. However, the growing adoption of containers raises concerns regarding the security of container solutions.
 
@@ -11,7 +11,7 @@ This study examines the issues of security hardening of containerized applicatio
 \foreignlanguage{russian}{
 	Технология контейнерной виртуализации прочно заняла лидирующее место в современных практиках разработки и эксплуатации приложений. Сочетание экономии ресурсов и скорости работы делают эту технологию привлекательной для программной индустрии. Однако с распространением контейнеризации вопросы безопасности встают всё более остро.
 
-	В данной работе будут рассмотрены вопросы усиления \linebreak безопасности контейнеризованных приложений. В частности, будет рассмотрена \linebreak архитектура современных решений в области контейнерной виртуализации и их \linebreak безопасность. Будут проанализированы актуальные уязвимости и атаки (такие как побег из контейнера) и причины появления данных уязвимостей. Особое внимание будет уделено исследованию механизмов защиты, которые позволяют усилить \linebreak безопасность контейнеризованных приложений, а также способам \linebreak автоматизированного обнаружения и предотвращения данных уязвимостей.
+	В данной работе будут рассмотрены вопросы усиления безопасности контейнеризованных приложений. В частности, будет рассмотрена архитектура современных решений в области контейнерной виртуализации и их безопасность. Будут проанализированы актуальные уязвимости и атаки (такие как побег из контейнера) и причины появления данных уязвимостей. Особое внимание будет уделено исследованию механизмов защиты, которые позволяют усилить безопасность контейнеризованных приложений, а также способам автоматизированного обнаружения и предотвращения данных уязвимостей.
 }
 
 \section*{Keywords}
