--- a/project/content.tex
+++ b/project/content.tex
@@ -1,12 +1,12 @@
 \section{Introduction}
 
-The concept of containerization is relatively mature. Process isolation traces its origins to the introduction of the chroot syscall in 1979 [A Brief History of Containers: From the 1970s Till Now]. Containerization significantly increased in popularity since 2013, when Docker emerged, and now containers play a leading role in modern software development and distribution practices. As the technology was widely adopting, the security concerns became more evident. As a result, while numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, various defensive mechanisms were developed.
+The concept of containerization is relatively mature. Process isolation traces its origins to the introduction of the chroot system call in 1979 [A Brief History of Containers: From the 1970s Till Now]. Containerization significantly increased in popularity since 2013, when Docker emerged, and now containers play a leading role in modern software development and distribution practices. As the technology was widely adopting, the security concerns became more evident. As a result, while numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, various defensive mechanisms were developed.
 
 \section{Terminology}
 
 In order to understand the following defensive technologies, we should revisit the basic definitions. 
 
-\textbf{Container} is an isolated process which uses a shared kernel [A Brief History of Containers: From the 1970s Till Now]. It may seem similar to Virtual Machine, especially when the process inside the container is shell. However, the containers and virtual machines represent opposite approaches to virtualisation. While each virtual machine usually has a separate guest kernel, which works on top of the host kernel, containers usually share the kernel among each other and the host operating system. Nevertheless, containerized applications are still relatively isolated: they may have its own network stack, separate filesystem and limited set of resources at the disposal. This isolation relies on several Linux kernel features: Linux Namespaces, chroot, cgroups and capabilities. [Liz chapter 4]
+\textbf{Container} is an isolated process which uses a shared kernel [A Brief History of Containers: From the 1970s Till Now]. It may seem similar to Virtual Machine, especially when the process inside the container is shell. However, the containers and virtual machines represent opposite approaches to virtualization. While each virtual machine usually has a separate guest kernel, which works on top of the host kernel, containers usually share the kernel among each other and the host operating system. Nevertheless, containerized applications are still relatively isolated: they may have its own network stack, separate file system and limited set of resources at the disposal. This isolation relies on several Linux kernel features: Linux Namespaces, chroot, cgroups and capabilities. [Liz chapter 4]
 
 \textbf{Kernel namespaces} restrict which resources the process may see. [chapter 4]. After being assigned ? to a particular namespace, the process cannot modify the resources like mount points and networking, and thus is unable to affect the processes outside the given namespace [https://docs.docker.com/engine/security/]. Current Linux kernel supports isolation for eight types of resources:
 \begin{itemize}
